@@ -82,6 +82,7 @@ interface:
   fixed, or multi-aggregated variable
 - new method SCIPgetNUpgrConss() which returns the number of upgraded constraints
 - new method SCIPlpRecalculateObjSqrNorm() which is used when the old calculated square norm was unreliable
+- added SCIPsortPtrBool() and corresponding sorting/inserting/deleting methods in pub_misc.h and necessary defines in misc.c
 
 features:
 - constraint handler can now register their upgrade functions for quadratic constraints to cons_quadratic (similar to LINCONSUPGD)
